[package]
name = "spin_future"
version = "0.1.0"
authors = ["paulkernfeld <me@paulkernfeld.com>"]
edition = "2018"
description = "Convert synchronous functions into valid but inefficient futures"
license = "Apache-2.0 OR MIT"
categories = ["asynchronous", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
futures-lite = "1.4.0"
